// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strongIcon Multiple icons 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon*3]]",
        "type": "strongIcon",
      },
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon*3]]",
        "type": "strongIcon",
      },
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon*3]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Simple relative strong icon 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Simple root strong icon 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "path": "/icons/+1",
        "pathType": "root",
        "raw": "[[/icons/+1.icon]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Strong icon and internal link on same line 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "Internal link",
        "pathType": "relative",
        "raw": "[Internal link]",
        "type": "link",
      },
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;
